--- a/gb/21/9/24/n13257394.md
+++ b/gb/21/9/24/n13257394.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ilgvva362/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ilgvva362/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ilgvva362/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ilgvva362/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ilgvva362/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ilgvva362/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ilgvva362/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ilgvva362/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ilgvva362/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ilgvva362/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ilgvva362/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ilgvva362/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ilgvva362/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ilgvva362/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ilgvva362/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>挺医护 银发闪耀疫起show才艺</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13257396-518435-600x400.jpg" />
 <h6>78岁的国宝“五洲掌中剧团”吴本源老师，以传统布袋戏演出，鼓励长者多运动、多动脑、戴口罩、勤洗手。（彰化基督教医院提供）
 </h6>
 <hr>
-<p>【大纪元2021年09月24日讯】（大纪元记者谢五男台湾彰化报导）彰基医学中心为鼓励长者多动脑、多运动、多参与社区活动，进而达到健康促进、活跃老化的效果，明（25）日下午2点至4点，举办“<ahref="https://github.com/ilgvva362/djy/blob/master/gb/tag/%E6%8C%BA%E5%8C%BB%E6%8A%A4.md#1">挺医护</a>???<ahref="https://github.com/ilgvva362/djy/blob/master/gb/tag/%E9%93%B6%E5%8F%91.md#1">银发</a><ahref="https://github.com/ilgvva362/djy/blob/master/gb/tag/%E9%97%AA%E8%80%80.md#1">闪耀</a>疫起show<ahref="https://github.com/ilgvva362/djy/blob/master/gb/tag/%E6%89%8D%E8%89%BA.md#1">才艺</a>”线上直播活动，表达疫情期间对医护人员的感谢及支持，才艺竞赛宛如是一场阿公阿妈的才艺嘉年华盛会。</p>
-<p>彰基医学中心院长陈穆宽教授表示，活动共分20组65岁以上长辈及长青团体录制表演影片参赛，表演内容丰富多元，包含歌唱、舞蹈、戏剧、乐器演奏及民俗技艺演出。长辈们以充满创意及热情活力的<ahref="https://github.com/ilgvva362/djy/blob/master/gb/tag/%E6%89%8D%E8%89%BA.md#1">才艺</a>表演，表达疫情期间对医护人员的感谢及支持，才艺竞赛宛如是一场阿公阿妈的才艺嘉年华盛会。</p>
+<p>【大纪元2021年09月24日讯】（大纪元记者谢五男台湾彰化报导）彰基医学中心为鼓励长者多动脑、多运动、多参与社区活动，进而达到健康促进、活跃老化的效果，明（25）日下午2点至4点，举办“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8C%BA%E5%8C%BB%E6%8A%A4.md#1">挺医护</a>???<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%93%B6%E5%8F%91.md#1">银发</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%97%AA%E8%80%80.md#1">闪耀</a>疫起show<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%89%8D%E8%89%BA.md#1">才艺</a>”线上直播活动，表达疫情期间对医护人员的感谢及支持，才艺竞赛宛如是一场阿公阿妈的才艺嘉年华盛会。</p>
+<p>彰基医学中心院长陈穆宽教授表示，活动共分20组65岁以上长辈及长青团体录制表演影片参赛，表演内容丰富多元，包含歌唱、舞蹈、戏剧、乐器演奏及民俗技艺演出。长辈们以充满创意及热情活力的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%89%8D%E8%89%BA.md#1">才艺</a>表演，表达疫情期间对医护人员的感谢及支持，才艺竞赛宛如是一场阿公阿妈的才艺嘉年华盛会。</p>
 <p>陈穆宽说，根据彰化县政府民政处2021年7月底数据显示，彰化县老年人口数已达21万人，老年人口比高达17.04%，高于全台平均值的16.49%。如何提升长者生活品质，营造高龄友善环境，使长者能健康地融入社区生活及活动，成为社区健康营造重要的目标。</p>
-<p>陈穆宽教授指出，彰基长期照护中心在近几年来，每年都会举办这类的活动，正当新冠肺炎肆虐台湾之际，感谢团队在这段期间仍然举办“<ahref="https://github.com/ilgvva362/djy/blob/master/gb/tag/%E6%8C%BA%E5%8C%BB%E6%8A%A4.md#1">挺医护</a>???<ahref="https://github.com/ilgvva362/djy/blob/master/gb/tag/%E9%93%B6%E5%8F%91.md#1">银发</a><ahref="https://github.com/ilgvva362/djy/blob/master/gb/tag/%E9%97%AA%E8%80%80.md#1">闪耀</a>疫起show才艺”线上直播活动。</p>
+<p>陈穆宽教授指出，彰基长期照护中心在近几年来，每年都会举办这类的活动，正当新冠肺炎肆虐台湾之际，感谢团队在这段期间仍然举办“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8C%BA%E5%8C%BB%E6%8A%A4.md#1">挺医护</a>???<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%93%B6%E5%8F%91.md#1">银发</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%97%AA%E8%80%80.md#1">闪耀</a>疫起show才艺”线上直播活动。</p>
 <p>彰化基督教医院是英国的传教士所创立，以“爱”为出发点，拥有125年的历史，更是彰化、南投、云林唯一的“医学中心”，可以说是这三个县市的领头羊。今年7月，经过政府的统计，彰化县的老人人口已经达到17%，全台湾的老年人口16.5%，那是更加的老化，所以照顾老人、预防退化，是我们的医院重要的责任。</p>
 <p>陈穆宽指出，很高兴在9月25日下午2点到4点，举办“挺医护 ? 银发闪耀疫起show才艺”线上直播活动，今年有20组65岁以上的老人来参加，希望藉由唱歌、表演才艺、跳舞等方式延缓健康退化，也期望藉由活动能够达到活跃老化的作用。祝福参加的20组65岁老人，都能够活到200岁、身体健康、万事如意，愿上帝祝福他们平安喜乐。</p>
 <p>彰基为“高龄友善医院”，除了提供长辈整合性的健康照护，更以多元方式鼓励参与社区活动，藉由活动参与，长辈培养唱歌、跳舞等休闲兴趣，让生活有了重心，也增加与家人朋友间的互动时间，提升自我价值感、减缓退化失能、降低老人忧郁，达到“预防照顾”、“活跃老化”的目的。</p>
@@ -26,47 +26,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/7/31/n13129077.md#1">台湾文化闪耀洛城 陈文石忆首次嘉年华</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/8/12/n13157294.md#1">银发族误踩2地雷 吃三低饮食伤健康</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/8/16/n13164967.md#1">醒吾校友挺医护  送便当为抗疫英雄打气</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/8/18/n13170948.md#1">新北市乐坛新星 线上音乐会闪耀登场</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/8/27/n13192045.md#1">北市公布餐饮业修正指引 银发据点9月逐步开放</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/7/n13216270.md#1">苗栗青年学生社团才艺征选起跑</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/13/n13229003.md#1">八德荣家住民才艺竞赛  长辈活力满场笑呵呵</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/16/n13238182.md#1">募集爱心月饼 中秋送爱挺医护</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/24/n13257354.md#1">精机中心捐赠设备 大叶大学提升就业力</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/24/n13257350.md#1">埔心乡“茄苳公”树病了 专家初判是罹梢枯病</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/31/n13129077.md#1">台湾文化闪耀洛城 陈文石忆首次嘉年华</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/12/n13157294.md#1">银发族误踩2地雷 吃三低饮食伤健康</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/16/n13164967.md#1">醒吾校友挺医护  送便当为抗疫英雄打气</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/18/n13170948.md#1">新北市乐坛新星 线上音乐会闪耀登场</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/27/n13192045.md#1">北市公布餐饮业修正指引 银发据点9月逐步开放</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/7/n13216270.md#1">苗栗青年学生社团才艺征选起跑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/13/n13229003.md#1">八德荣家住民才艺竞赛  长辈活力满场笑呵呵</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/16/n13238182.md#1">募集爱心月饼 中秋送爱挺医护</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615574.md#1">市售鲜乳标章检查业务 彰县全国第一绩优单位</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615578.md#1">职训有成一技在身 学员展现成果</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/27/n11350548.md#1" target="_blank">王友群：陈独秀等10位中共党魁的最后结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11581886.md#1" target="_blank">澳青年法轮功学员：修大法给我带来的福分</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/26/n11478084.md#1" target="_blank">翻译家巫宁坤爱国竟受难 历劫著书留警训</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/21/n13250236.md#1">【百年真相】土匪还是英雄？还原“座山雕”</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/14/n13234239.md#1">【未解之谜】穿越时空 二战飞行员的奇遇</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/14/n13234395.md#1">草原女王：成吉思汗的监国公主阿剌海别吉</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/21/n13250615.md#1">【方菲访谈】李有甫：从大禹治水看今天中国水患</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/24/n13256755.md#1">【珍言真语】冯玉兰就加国大选后局势谈看法</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/23/n13256320.md#1">【时事纵横】台湾有望入CPTPP？中共多部门叫嚣</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/24/n13256502.md#1">【财商天下】中共申请CPTPP 澳洲来硬的</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/22/n13251803.md#1">【翻墙必看】刘鹤党内做检讨 权力被削弱？</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/22/n13253289.md#1">王友群：王立科被“双开” 孟建柱高危？</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/22/n13253803.md#1">【远见快评】新文件再揭武毒所蝙蝠洞可怕秘密</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/21/n13250699.md#1">央视中秋晚会爆假唱 明星嘴闭上声音还在</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/22/n13253897.md#1">刘真离世一年半 辛龙发四字帖文喊话</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/21/n13250887.md#1">中秋夜晒与儿女亲吻照 章子怡称忙到忘吃月饼</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/23/n13256233.md#1">张嘉译闫妮合唱红歌惹议 相关视频全网下架</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/22/n13252728.md#1">龙劭华今告别式 演艺圈众友人送最后一程</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/21/n13249714.md#1">摸黑回击野熊攻击 日本老翁问：你到底是谁？</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/18/n13243338.md#1">丝瓜消便秘、美容  有5大健康功效</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/23/n13254428.md#1">刚出生小狗被猴子绑架到树上 善心人士搭救</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/21/n13249256.md#1">一简单步骤就让西红柿三明治美味瞬间升级</a></li>
-<li><a href="https://github.com/ilgvva362/djy/blob/master/gb/21/9/22/n13252281.md#1">美国研发“蔬菜疫苗” 吃下肚子就接种完毕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ilgvva362/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ilgvva362/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/24/n13257394.htm">挺医护 银发闪耀疫起show才艺</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/24/n13257394.htm">挺医护 银发闪耀疫起show才艺</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ilgvva362/djy/blob/master/gb/21/9/24/n13257394.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ilgvva362/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ilgvva362/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ilgvva362/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ilgvva362/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilgvva362/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/9/24/n13257394.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
